ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot
  namespace: huyldq1
  labels:
    status: blue-green
spec:
  ingressClassName: nginx
  rules:
  - host: huyhome.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: springboot-blue
            port: 
              number: 8080
  - host: www.huyhome.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: springboot-blue
            port: 
              number: 8080
